# nrf5340dk

./: .gitignore  CMakeLists.txt  Kconfig.temp  README.md  nrf5340dk.code-workspace  prj.conf  prj_minimal.conf
nrf5340dk/: CMakeCache.txt  build_info.yml
src/: lbs_init.c  main.c  myfunction.h  user_service.c  user_service.h  user_service_init.c
src/bsp/: bsp.h  bsp_button_led.c  bsp_button_led.h  bsp_gpio.c
